exports[`test arrow.js 1`] = `
"// Error
const beep = (data/*: Object*/) => {}

// OK
const beep = (data/*: Object*/, secondData/*: Object*/) => {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// Error
const beep = (data: Object) => {};

// OK
const beep = (data: Object, secondData: Object) => {};
"
`;

exports[`test arrow.js 2`] = `
"// Error
const beep = (data/*: Object*/) => {}

// OK
const beep = (data/*: Object*/, secondData/*: Object*/) => {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// Error
const beep = (data /*: Object*/) => {};

// OK
const beep = (data /*: Object*/, secondData /*: Object*/) => {};
"
`;
